* ntpd: updated to the current version
* knot-resolver: remove AD flag in forwarding mode
* updated and fixed switch driver
==================== 3.5.1 ======================
* openssl: fix CVE-2016-7056
* knot-resolver: limit forwarding to only four servers
* watchcat: no longer part of LuCI user list as current version causes some issues (still available in repo)
* opkg-trans: handle directories in .list files
===================== 3.5 =======================
* knot-resolver: support forwarding to multiple servers
* Foris: add retry mechanism when NETCONF server dies, reintroduce sending stats to About page on Turris
* fstrim: include binary
* gettext: provide binary to be used in scripts
* openssh: update to version 7.4p1
* hostapd: enable FST
* nuci: fix backup restore script
* kernel: not removing info from proc
* lighttpd: do not block on getting entropy during boot
* squid: updtae to version 3.5.23
* curl: update to version 7.52.1
* ebtables: fixed segfaulting
* knot: update to version 2.3.3
* kmod-uvc: Make it compile on Omnia
* kmod-sched-cake: Update from LEDE
* wifi: Update mac80211, ath10k-ct and hostapd from LEDE
* ath10k: use ath10k again as default instead of ath10k-ct
* mac80211: Backport a few more patches from LEDE
* diagnostics: turris_webs module added - checks whether the turris webs (api.turris.cz, www.turris.cz)
* nuci: Fix of dir_content function
* python-bottle: Update to 0.12.11 (fixes CVE-2016-9964; Foris was not affected)
===================== 3.4 =======================
* printing: Proof of concept of CUPS integration
* python-turris-gpio: Add support for Turris Omnia board.
* foris-tls-plugin: Add one-time QR codes for the mobile application.
* kernel: Enable NEON instructions.
* iproute: Bump package release after adding cake qdisc.
* ucollect-sniff: Don't generate 400
* opkg: don't destroy /usr/lib/opkg/status
* updater-migrate: Don't crash when missing override.branch
* nuci: configurable content of backups